2007-04-14  Quentin Mathe <qmathe@club-internet.fr>

    * Controller.h:
    * Controller.m:
    (-logOut:): Rewritten to take in account bug report #8575 #8556. Also now
    calls -[SCSystem logOut] instead of -logOutAndPowerOff:.
    (-sleep:, -reboot:, -shutDown:): Implemented.
    (-_reportSessionServerError:): New method.
    (-_workspaceApp): Renamed -workspaceApp method.
    Made -applicationDidFinishLaunching: and -windowDidMove: private methods.

2007-04-12  Quentin Mathe <qmathe@club-internet.fr>

    * Controller.h:
    * Controller.m (-[NSApplication menuBarWindowFrame]): New method to be used
    by EtoileWildMenus through DO.

2007-03-27  Quentin Mathe <qmathe@club-internet.fr>

    * Subprojects/AboutEtoileEntry/English.lproj/AboutEtoileEntry.gorm: Added 
    2007 to copyright years. Fixed 'Etoile Project' mention to simply talk of
    of Étoilé with accented characters. Fixed GPL license mention by replacing
    it with Jesse's idea. Improved info area layout to better accommodate long
    hostnames and kernel version (without cutting them off most of time).

2007-03-27  Yen-Ju Chen <yjchenx gmail>

	* Subprojects/AboutEtoileEntry/ETMachineInfo_Linux.m:
	Add my G4 CPU identifier.

2007-03-27  Quentin Mathe <qmathe@club-internet.fr>

    Time to commit an old patch (with minor tweaks) proposed on May 19, 2006. 
    Override David's untested fix introduced on r1563.
    * Subprojects/AboutEtoileEntry/ETMachineInfo.m: Added spacing between value 
    and unit.
    * Subprojects/AboutEtoileEntry/ETMachineInfo_Linux.m: Modified to support 
    PowerPC architecture by parsing specific fields in /proc/cpuinfo. 

2007-03-14  Yen-Ju Chen <yjchenx gmail>

	* Show a calendar if clock is clicked.
          For some reason, actions does not work. Weird.
	* Fix up compilation.

2007-03-06  Quentin Mathe <qmathe@club-internet.fr>

	* Controller.m (-windowDidMove:): Commented out code to reset frame if the