@@ -24,13 +24,19 @@
 #import <Foundation/NSObject.h>
 #import <Foundation/NSGeometry.h>
 
-@class NSNotification, MenuBarWindow;
+@class NSNotification, MenuBarWindow, MenuBarView;
 
 extern MenuBarWindow * ServerMenuBarWindow;
 
 @interface Controller : NSObject
+{
+  MenuBarView *menuBarView;
 
-+ (NSRect) menuBarWindowFrame;
+  /* keep menu bar only big enough to fit etoile log and all menulets */
+  BOOL isShortFormat;
+}
+
+//+ (NSRect) menuBarWindowFrame;
 + (MenuBarWindow *) sharedMenuBarWindow;
 
 - (void) logOut: sender;
