@@ -1,3 +1,7 @@
+2007-04-15  Yen-Ju Chen <yjchenx gmail>
+
+    * Support short format and intentionally not document it as feature.
+
 2007-04-14  Quentin Mathe <qmathe@club-internet.fr>
 
     * Controller.h:
